--- a/app/views/customer_mailer/stolen_bike_alert_email.html.haml
+++ b/app/views/customer_mailer/stolen_bike_alert_email.html.haml
@@ -1,4 +1,4 @@
-- stolen_word = @bike.recovered ? t(".html.recovered_or_found") : t(".html.stolen")
+- stolen_word = @bike.abandoned ? t(".html.recovered_or_found") : t(".html.stolen")
 - bike_type = @biketype
 
 %h1{:style => "font-weight: 400; font-size: 30px;"}
