--- a/app/views/organized_mailer/finished_registration.text.haml
+++ b/app/views/organized_mailer/finished_registration.text.haml
@@ -23,7 +23,7 @@
 
 - if @bike.stolen
   - stolen_record = @bike.current_stolen_record
-  - if @bike.recovered?
+  - if @bike.abandoned?
     = t(".text.bike_found_at", address: stolen_record.address(skip_default_country: true))
   - else
     = t(".text.bike_stolen_from", address: stolen_record.address(skip_default_country: true))
@@ -47,7 +47,7 @@
   = t(".text.sign_up_on_bikeindex_to_claim", biketype: @bike.type)
   = t(".text.edit_it_upload_photos")
 
-- unless @bike.recovered
+- unless @bike.abandoned
   = "\n"
 
   = t(".text.protect_your_bike")
