--- a/app/assets/stylesheets/revised/pages/bikes/edit_alert.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/edit_alert.scss
@@ -8,7 +8,7 @@
 
     .times {
       font-size: 150%;
-      line-height: 0.8em;
+      line-height: .8em;
       vertical-align: middle;
     }
   }
@@ -41,14 +41,76 @@
     }
   }
 
+  .image-selection-container {
+    ul {
+      display: flex;
+      flex-wrap: nowrap;
+      height: 250px;
+      list-style-type: none;
+      overflow-x: auto;
+      padding: 0;
+      width: 100%;
+    }
+
+    li {
+      border: 1px solid $gray-lightish;
+      cursor: pointer;
+      flex: 0 0 auto;
+      margin: auto 5px;
+      padding: 5px;
+    }
+
+    li:first-of-type {
+      margin-left: 0;
+    }
+
+    .selected {
+      background: $blue;
+    }
+
+    .selection-preview-image-template {
+      background-image: image-url('promoted_alerts/facebook-template.png');
+      background-size: cover;
+      height: 225px;
+      margin-bottom: 4rem;
+      padding: 13px 0;
+      position: relative;
+    }
+
+    .selection-preview-image {
+      height: 90%;
+      left: 42px;
+      position: absolute;
+      width: 90%;
+    }
+
+    .selection-preview-caption {
+      background: $black;
+      bottom: 4px;
+      color: $white;
+      font-style: italic;
+      height: 10%;
+      line-height: 1.5;
+      position: absolute;
+      right: 0;
+      text-align: center;
+      vertical-align: middle;
+      width: 42%;
+    }
+
+    img {
+      max-height: 200px;
+    }
+  }
+
   .detail-card-container {
     background-color: $white;
-    border: 1px solid #999;
+    border: 1px solid $gray-subtle;
     border-radius: 4px;
     margin: 15px auto;
 
     &.selected {
-      border: 1px solid #3498db;
+      border: 1px solid $blue;
     }
   }
 
@@ -60,20 +122,20 @@
     font-weight: 400;
     letter-spacing: 1.25px;
     padding: 25px;
-    text-align: center;
     position: relative;
+    text-align: center;
   }
 
   .preferred-tag {
-    background-color: #3598da;
+    background-color: $blue;
     bottom: -7px;
-    color: #fff;
+    color: $white;
     font-size: 12px;
     line-height: 1;
     margin: 0;
     padding: 5px 10px;
     position: absolute;
-    right: 0px;
+    right: 0;
     text-align: right;
     width: 93px;
   }
@@ -150,7 +212,7 @@
     transition: all 125ms ease-in-out;
 
     &::before {
-      background-color: #ffffff;
+      background-color: $white;
       border: 2px solid #919197;
       border-radius: 50%;
       content: '';
@@ -162,15 +224,15 @@
     }
 
     &.selected {
-      background-color: #3498db;
+      background-color: $blue;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
     }
 
     &.selected::before {
-      background-color: #3498db;
-      border-color: #ffffff;
-      color: #ffffff;
+      background-color: $blue;
+      border-color: $white;
+      color: $white;
       content: '\2713';
       font-family: 'zp-icons';
       font-style: normal;
