Add SCSS color variables

--- a/app/assets/stylesheets/revised/mixins/_colors.scss
+++ b/app/assets/stylesheets/revised/mixins/_colors.scss
@@ -9,9 +9,10 @@ $blue-light: #92c8ec;
 $blue-faint: #fffffff5;
 
 $gray-darkest: #1a1a1a;
-$gray-darker: #333333;
+$gray-darker: #333;
 $gray-dark: #222;
 $gray: #666;
+$gray-subtle: #999;
 $gray-light: #a4a4a4;
 $gray-lightish: #e4e4e4;
 
