--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -37,7 +37,7 @@
                           class: (i.zero? ? "selected js-image-select" : "js-image-select"),
                           data: {"image-url" => image.image_url(:medium), "image-id" => image.id} do
                           = image_tag image.image_url(:medium)
-                    .text-center.w-100#js-selection-preview
+                    .selection-preview.text-center.w-100#js-selection-preview
                       %h5= t(".preview")
                       .selection-preview-image-template
                         .selection-preview-image#js-selection-preview-image
