--- a/app/assets/stylesheets/revised/pages/bikes/edit_alert.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/edit_alert.scss
@@ -77,7 +77,7 @@
       background-size: cover;
       margin: auto;
       max-width: 420px;
-      padding: 13px 0 13px 36px;
+      padding: 13px 0 13px 28px;
       position: relative;
       vertical-align: middle;
       width: auto;
@@ -97,6 +97,7 @@
       background: $black;
       bottom: 4px;
       color: $white;
+      font-size: 1rem;
       font-style: italic;
       height: 10%;
       line-height: 1.5;
@@ -109,6 +110,14 @@
 
     img {
       max-height: 200px;
+    }
+  }
+
+  @media (max-width: $grid-breakpoint-md) {
+    .image-selection-container {
+      .selection-preview-caption {
+        font-size: .70rem;
+      }
     }
   }
 
