--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -44,7 +44,7 @@
               %pre
                 %code
                   = @feedback.feedback_hash.to_yaml.gsub("---\n", "")
-        - if @feedback.feedback_type == "bike_delete_request"
+        - if @feedback.feedback_type == "bike_delete_request" &&
           %tr
             %td
               View Bike
