--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -1,4 +1,3 @@
-- feedback_hash = @feedback.feedback_hash || nil
 .admin-subnav
   .col
     %h1
@@ -44,12 +43,12 @@
               %pre
                 %code
                   = @feedback.feedback_hash.to_yaml.gsub("---\n", "")
-        - if @feedback.feedback_type == "bike_delete_request" &&
+        - if @feedback.feedback_type == "bike_delete_request" && @bike.deleted?
           %tr
             %td
-              View Bike
+              Bike is deleted
             %td
-              = link_to "Deleted Bike", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+              = link_to "View deleted biked", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
   .col-sm-6
     .card
       .card-body
