--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -43,12 +43,17 @@
               %pre
                 %code
                   = @feedback.feedback_hash.to_yaml.gsub("---\n", "")
-        - if @feedback.feedback_type == "bike_delete_request" && @bike.deleted?
-          %tr
-            %td
-              Bike is deleted
-            %td
-              = link_to "View deleted biked", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+        %tr
+          %td
+            Bike
+          %td
+            - if @bike.present?
+              - if @bike.deleted?
+                = link_to "Soft Deleted", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+              - else
+                = link_to @bike.id, edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+            - else
+              Bike permanently deleted
   .col-sm-6
     .card
       .card-body
