--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -60,6 +60,12 @@
     %table.table-list
       %tr
         %td
+          Confirmed?
+        %td
+          - if @user.confirmed?
+            = "&#x2713;".html_safe
+      %tr
+        %td
           email
         %td
           = @user.email
@@ -92,8 +98,7 @@
         %td
           Ambassador?
         %td
-          %strong
-            = @user.ambassador?
+          = "&#x2713;".html_safe if @user.ambassador?
       %tr
         %td
           Phone
@@ -168,36 +173,37 @@
   = render partial: "/admin/memberships/table", locals: { memberships: @user.memberships }
 
 
-- if @user.user_emails.count > 1
-  %h2 User emails
-  .full-screen-table
-    %table.table.table-striped.table-bordered.table-sm
-      %thead
-        %th
-          Created&nbsp;<small class="convertTimezone"></small>
-        %th
-          Confirmed
-        %th
-          Primary
-        %th
-          Old User Id
-      %tbody
-        - @user.user_emails.each do |user_email|
-          %tr
-            %td
-              .less-strong-hold
-                %span.less-strong-right.medium-screens
-                  = user_email.id
+%h4.mt-4 User emails
+.full-screen-table
+  %table.table.table-striped.table-bordered.table-sm
+    %thead
+      %th
+        Created&nbsp;<small class="convertTimezone"></small>
+      %th
+      %th
+        Confirmed
+      %th
+        Primary
+      %th
+        Old User Id
+    %tbody
+      - @user.user_emails.each do |user_email|
+        %tr
+          %td
+            .less-strong-hold
+              %span.less-strong-right.medium-screens
+                = user_email.id
               %span.convertTime
                 = l user_email.created_at, format: :convert_time
-            %td
-              = "&#x2713;".html_safe if user_email.confirmed
-            %td
-              = "&#x2713;".html_safe if user_email.primary
-            %td
-              = user_email.old_user_id
+          %td= user_email.email
+          %td
+            = "&#x2713;".html_safe if user_email.confirmed
+          %td
+            = "&#x2713;".html_safe if user_email.primary
+          %td
+            = user_email.old_user_id
 
-%hr
+%hr.mt-4
 %h4 Edit
 = form_for [:admin, @user] do |f|
   - if @user.errors.any?
