--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -81,7 +81,7 @@
         - if @bike.user_hidden
           User hidden
         - else
-          Hidden (fake delete)
+          Hidden (oldskool fake delete)
   .row.mt-2
     .col-md-4.col-lg-6
       .form-group
