--- a/app/views/admin/memberships/edit.html.haml
+++ b/app/views/admin/memberships/edit.html.haml
@@ -20,7 +20,7 @@
               = link_to sender.display_name, admin_user_path(sender)
             - else
               %small.less-strong
-                probably self created
+                self created
         %tr
           %td
             Receiver
