Minor changes to bikes edit and feedbacks show for deleted bikes (#1157)
* Commit

* teeny tiny refactor

* ope

* nevermiiiind

* ah goofy typo

* WIP

* DB stuff

* Update show.html.haml

* commit

* puuuush, done?

* oops, love that safe operator.

* huh

* Update bike_codes_controller.rb

* yes?

* okay here it is

* commit

* ahhh didn't autosave

* testo

--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -16,6 +16,13 @@
   .col-12
     %h1
       Edit Bike
+      - if @bike.deleted?.present?
+        %span.text-danger
+          Deleted at:
+          %span.convertTime
+            = l @bike.deleted_at, format: :convert_time
+
+
 
 - if @bike.user_hidden
   %h2.text-danger.mb-4{ style: "margin-bottom: 2rem; text-align: center;" }
