--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -4,7 +4,6 @@
       Messages
       %small
         = link_to "view all", admin_feedbacks_path
-
 .row
   .col-sm-6
     %table.table-list
@@ -44,7 +43,17 @@
               %pre
                 %code
                   = @feedback.feedback_hash.to_yaml.gsub("---\n", "")
-
+        %tr
+          %td
+            Bike
+          %td
+            - if @bike.present?
+              - if @bike.deleted?
+                = link_to "Soft Deleted", edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+              - else
+                = link_to @bike.id, edit_admin_bike_path(id: @feedback.feedback_hash["bike_id"])
+            - else
+              Bike permanently deleted
   .col-sm-6
     .card
       .card-body
