--- a/app/views/shared/_period_select.html.haml
+++ b/app/views/shared/_period_select.html.haml
@@ -1,13 +1,13 @@
 #timeSelectionBtnGroup.col-md.col-12.text-right{ role: "group" }
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "hour"), data: { period: "hour" } }
-    = t(".last_hour")
+    = t(".past_hour")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "day"), data: { period: "day" } }
-    = t(".last_day")
+    = t(".past_day")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "week"), data: { period: "week" } }
-    = t(".last_7_days")
+    = t(".past_7_days")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "month"), data: { period: "month" } }
-    = t(".last_30_days")
+    = t(".past_30_days")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "year"), data: { period: "year" } }
-    = t(".last_year")
+    = t(".past_year")
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "all"), data: { period: "all" } }
     = t(".all")
