Rename recovered bikes to abandoned bikes (#1156)
* create column switch migration

* rollback

* edit tests, change model wording,, migrate db

* api controller changes

* more changes

* ahhhhhhh

* green please

* lotta changes

* closer

* ope

* closest

* Yes??!?!

* Update structure.sql

* change some yml, change migration

* i hate structure.sql

* okay

* wow PLEASE

* PROGRESS

* god bless

* sry

* Revert "sry"

This reverts commit 9b56d7b72afd8006e74f64d622332e2e2734257f.

* fail fail fail

* Revert "fail fail fail"

This reverts commit a05bb1ced6fa076615155bcae541775075b9a4d9.

* okay cool

--- a/app/views/organized_mailer/finished_registration.text.haml
+++ b/app/views/organized_mailer/finished_registration.text.haml
@@ -2,7 +2,7 @@
 - bike_url = ownership_url(@ownership)
 - frame_colors = @bike.frame_colors
 
-- bike_type = if @bike.stolen? && @bike.recovered?
+- bike_type = if @bike.stolen? && @bike.abandoned?
   - t(".text.recovered_biketype", biketype: @bike.type)
 - else
   - t(".text.stolen_biketype", biketype: @bike.type)
@@ -23,7 +23,7 @@
 
 - if @bike.stolen
   - stolen_record = @bike.current_stolen_record
-  - if @bike.recovered?
+  - if @bike.abandoned?
     = t(".text.bike_found_at", address: stolen_record.address(skip_default_country: true))
   - else
     = t(".text.bike_stolen_from", address: stolen_record.address(skip_default_country: true))
@@ -35,7 +35,7 @@
   = "\n"
 
 - if @bike.stolen
-  - if @bike.recovered
+  - if @bike.abandoned
     = t(".text.hopefully_you_find_the_owner_soon")
   - else
     = t(".text.hopefully_you_find_the_biketype_soon", biketype: @bike.type)
@@ -47,7 +47,7 @@
   = t(".text.sign_up_on_bikeindex_to_claim", biketype: @bike.type)
   = t(".text.edit_it_upload_photos")
 
-- unless @bike.recovered
+- unless @bike.abandoned
   = "\n"
 
   = t(".text.protect_your_bike")
