--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -39,8 +39,8 @@
                     = bike.thumb_image
                     - if bike.stolen
                       %span.personal-page-stolen-tag
-                        - if bike.recovered?
-                          = t(".recovered")
+                        - if bike.abandoned?
+                          = t(".abandoned")
                         - else
                           = t(".stolen")
                   .card-title
