--- a/app/views/welcome/user_home.html.haml
+++ b/app/views/welcome/user_home.html.haml
@@ -45,7 +45,7 @@
                       = bike.attr_list_item(bike.serial_display, t(".serial"))
                       = bike.attr_list_item(bike.frame_colors.to_sentence, t(".primary_colors"))
                       - if bike.current_stolen_record.present?
-                        - recovered_or_stolen =  bike.recovered? ? t(".date_recovered") : t('.date_stolen')
+                        - recovered_or_stolen =  bike.abandoned? ? t(".date_recovered") : t('.date_stolen')
                         = bike.attr_list_item(l(bike.current_stolen_record.date_stolen, format: :dotted), recovered_or_stolen)
                         = bike.attr_list_item(bike.short_address(bike.current_stolen_record), t(".location"))
                     %ul.attr-list
