--- a/app/views/admin/paid_features/_form.html.haml
+++ b/app/views/admin/paid_features/_form.html.haml
@@ -14,19 +14,19 @@
         = f.text_field :name, class: "form-control"
   - if current_user.developer?
     .row
-      .col-md-6.col-xs-12
+      .col-md-6
         .form-group
           = f.label :feature_slugs_string do
             Paid Feature Slugs <small>comma delineated</small>
-
-      = f.text_area :feature_slugs_string, style: "width: 100%;", class: "form-control"
-      %br
-      %small.less-strong
-        Used slugs:
-        - PaidFeature::EXPECTED_SLUGS.sort.each do |slug|
-          %code
-            = slug
-  .row
+          = f.text_area :feature_slugs_string, class: "form-control"
+      .col-md-6
+        %label.d-none.d-md-block &nbsp;
+        %small.less-strong
+          Used slugs:
+          - PaidFeature::EXPECTED_SLUGS.sort.each do |slug|
+            %code
+              = slug
+  .row.mt-2
     .col-md-6.col-xs-12
       .form-group
         = f.label :amount
