--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -13,7 +13,7 @@
     = hidden_field_tag :stolen, value: true
 
   - if @bike.abandoned
-    = f.hidden_field :recovered, value: true
+    = f.hidden_field :abandoned, value: true
 
   .form-well-container.container
     .row
