--- a/app/views/welcome/choose_registration.html.haml
+++ b/app/views/welcome/choose_registration.html.haml
@@ -24,7 +24,7 @@
                 &#10004
               = t(".add_a_stolen_bike")
           %li
-            %a.choose-type{data: {target: new_bike_url(recovered: true)}}
+            %a.choose-type{data: {target: new_bike_url(abandoned: true)}}
               %span.add-selected
                 &#10004
               = t(".add_a_stolenfound_bike")
