--- a/app/views/layouts/application_revised_bikehub.html.haml
+++ b/app/views/layouts/application_revised_bikehub.html.haml
@@ -21,44 +21,66 @@
             %p= t(".powered_by")
             %a.primary-logo{ href: user_root_url }
               = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
-          %a.bikehub-nav-item.bikehub-nav-item-first{ href: "https://bikehub.com/contact/" }
+          %a.bikehub-nav-item.bikehub-nav-item-first{href: "#"}
+            Home
+          %a.bikehub-nav-item{ href: "https://bikehub.com/contact/" }
             = t(".contact")
-          %a.bikehub-nav-item{ href: new_user_path(partner: sign_in_partner), class: (signup_page ? "active" : "") }
-            = t(".sign_up")
-          %a.bikehub-nav-item{ href: new_session_path(partner: sign_in_partner), class: (signup_page ? "" : "active") }
-            = t(".log_in")
-    .container.bikehub-explanation.mb-4
-      .row
-        .col-sm-12
-          %h1
-            - if signup_page
-              = t(".bikehub_signup")
-            - else
-              = t(".bikehub_login")
-      .row
-        .col-sm-12
-          - if signup_page
-            %p
-              = t(".powered_by_bike_index")
-              = t(".signup_message")
-          - else
-            %p
-              = t(".powered_by_bike_index")
-              = t(".login_message")
+          %a.bikehub-nav-item{ href: "#"}
+            Register
+          %a.bikehub-nav-item{ href: "#"}
+            Log In
+          %a.bikehub-nav-item{ href: "#"}
+            Select a station
 
-    = render "layouts/revised_messages"
-    = yield
+    .header-box
+      / render header image
+      %p
+        Bike Index is a 501(c)(3) nonprofit and the most widely used bicycle registration service in the world.
+      %p
+        At BikeHub, we believe bike security is more than just a strong U-lock
+      %p
+        Through this partnership, BikeHub patrons enjoy access to the most secure public bike parking - and registration with the nation's largest network, used by law enforcement agencies, universities and advocates to connect recovery bikes with their owners.
+    .form-box
+      %h1
+        BikeHub accounts are powered by Bike Index - The premier bike registry.
+      %h1
+        Logging in here will log you into BikeHub
 
-    .container.bikehub-explanation{ style: "margin-top: 60px;" }
-      .row
-        .col-sm-12
-          %h2
-            = t(".why_bikeindex")
-      .row
-        .col-sm-12
-          %p= t(".bikeindex_a_nonprofit")
-          %p= t(".bike_security")
-          %p= t(".bikeindex_bikehub_partnership")
+      .log-in
+
+
+    / .container.bikehub-explanation.mb-4
+    /   .row
+    /     .col-sm-12
+    /       %h1
+    /         - if signup_page
+    /           = t(".bikehub_signup")
+    /         - else
+    /           = t(".bikehub_login")
+    /   .row
+    /     .col-sm-12
+    /       - if signup_page
+    /         %p
+    /           = t(".powered_by_bike_index")
+    /           = t(".signup_message")
+    /       - else
+    /         %p
+    /           = t(".powered_by_bike_index")
+    /           = t(".login_message")
+
+    / = render "layouts/revised_messages"
+    / = yield
+
+    / .container.bikehub-explanation{ style: "margin-top: 60px;" }
+    /   .row
+    /     .col-sm-12
+    /       %h2
+    /         = t(".why_bikeindex")
+    /   .row
+    /     .col-sm-12
+    /       %p= t(".bikeindex_a_nonprofit")
+    /       %p= t(".bike_security")
+    /       %p= t(".bikeindex_bikehub_partnership")
 
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
