--- a/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
+++ b/app/assets/stylesheets/revised/sections/partner_sign_in_up.scss
@@ -1,6 +1,10 @@
 // Bikehub
 $bikehub-header: #92d149;
 
+.bike-hub-bike-index-about {
+  max-width: 610px;
+}
+
 .bikehub-explanation {
   h1,
   h2 {
